@@ -1,6 +1,8 @@
 package com.akplaza.infra.domain.space.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -57,6 +59,35 @@ public class RackService {
     }
 
     public List<RackResponse> getAll() {
-        return rackRepository.findAll().stream().map(RackResponse::new).toList();
+        List<Rack> racks = rackRepository.findAll();
+        // 🌟 N+1 쿼리 방어: 랙별 하드웨어 개수를 DB에서 단 1번의 쿼리로 가져와 매핑
+        List<Object[]> counts = hardwareRepository.countHardwareByRack();
+        Map<Long, Integer> countMap = counts.stream()
+                .collect(Collectors.toMap(
+                        row -> (Long) row[0],
+                        row -> ((Number) row[1]).intValue()));
+
+        return racks.stream()
+                // Map에서 개수를 꺼내 DTO에 전달 (없으면 0)
+                .map(rack -> new RackResponse(rack, countMap.getOrDefault(rack.getId(), 0)))
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public Long updateRack(RackRequest dto) {
+        log.info("[UPDATE] Rack 수정 요청: {}", dto.getRackNo());
+        if (rackRepository.existsByRackNo(dto.getRackNo())) {
+            throw new DuplicateResourceException("이미 존재하는 랙 번호입니다.");
+        }
+        Location location = locationRepository.findById(dto.getLocationId())
+                .orElseThrow(() -> new ResourceNotFoundException("장소 정보를 찾을 수 없습니다."));
+
+        Rack rack = Rack.builder()
+                .location(location)
+                .rackNo(dto.getRackNo())
+                .name(dto.getName())
+                .size(dto.getSize())
+                .build();
+        return rackRepository.save(rack).getId();
     }
 }
